# secpass

./: .gitignore  .travis.yml  CNAME  Cargo.toml  Gopkg.toml  README.md  build.sh  cert.pem  config.json  go.mod  go.sum  key.pem  main.go  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  go.workflow  go.yml
Docker/: make.sh
cmd/secpass/: secpass.go
conf/: conf.go
handler/: css.go  default.go  entry.go  image.go  index.go  js.go  login.go  register.go  settings.go  web.go
main/: main.go
resources/: config.json
resources/css/: greedy.accordion.css  greedy.actionbar.css  greedy.alertbox.css  greedy.appbar.css  greedy.breadcrumb.css  greedy.buttons.css  greedy.colors.css  greedy.core.css  greedy.images.css  greedy.input.css  greedy.loadingscreen.css  greedy.menu.css  greedy.modal.css  greedy.notify.css  greedy.panels.css  greedy.preloaders.css  greedy.progressbar.css  greedy.scrollbar.css  greedy.sidebar.css  greedy.slidebar.css  greedy.switch.css  greedy.tabcontrol.css  greedy.tables.css  greedy.typography.css  jquery-ui.css  main.css  material-icons.css
resources/js/: greedy.notify.js  index.js  jquery-2.1.4.js  jquery-ui.js
resources/language/: de.json  en.json  ru.json
resources/sql/: add_category.sql  add_default_category.sql  add_password.sql  change_password.sql  delete_account.sql  delete_categories.sql  delete_category.sql  delete_category_passwords.sql  delete_password.sql  delete_passwords.sql  disable_two_factor.sql  edit_category.sql  edit_password.sql  (+13 more)
shorts/: shorts.go
spuser/: spuser.go
user/: user.go
(+41 files in other folders)
